gobmkida/c1/attack3
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/attack3/src/engine/reading.c:3399:36: error: use of undeclared identifier 'byte_9AA89F'
&& to_move[0] != ( unsigned __int8)byte_9AA89F[v15] 
                                   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/attack3/src/engine/reading.c:3400:36: error: use of undeclared identifier 'byte_9AA88C'
&& to_move[0] != ( unsigned __int8)byte_9AA88C[v15] 
                                   ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/attack3/src/obj/1/reading.o] Error 1
